--- a/Frontend/src/Components/Styles/MainPage.module.css
+++ b/Frontend/src/Components/Styles/MainPage.module.css
@@ -82,13 +82,16 @@
 
 .name {
   display: flex;
-  max-width: 100%;
+  max-width: 15em;
+  position: absolute;
+  overflow-x: auto;
+  overflow-y: hidden;
+  white-space: nowrap;
   flex-direction: row;
-  overflow-x: hidden;
   flex-wrap: nowrap;
   font-size: 0.99em;
   gap: 7px;
-  padding: 0%;
+  padding-bottom: 0;
   align-items: center;
 }
 
@@ -96,12 +99,13 @@
   font-size: 0.8em;
   color: #878ba9;
   font-weight: 500;
+  padding-top: 2em;
   padding-left: 32px;
 }
 
 .navRight {
   display: flex;
-  margin-left: 35%;
+  margin-left: 40%;
   gap: 15px;
 }
 
@@ -195,7 +199,7 @@
 
 @media (max-width: 1281px) {
   .navRight {
-    margin-left: 25%;
+    margin-left: 34%;
   }
   .logout {
     left: 86.5%;
@@ -253,7 +257,7 @@
 
   .navRight {
     flex-direction: row;
-    margin-left: 0px;
+    margin-left: 7%;
     gap: 10px;
     flex-wrap: wrap;
     width: 40%;
@@ -291,6 +295,8 @@
   }
 
   .name {
+    max-width: 13em;
+    margin-top: 1em;
     font-size: 0.89em;
     align-items: stretch;
   }
@@ -303,7 +309,8 @@
   .date {
     padding-left: 22px;
     font-size: 0.8em;
-    padding-top: 10px;
+    margin-top: 12px;
+    margin-left: 6px;
   }
 
   .hamburgerIcon {
@@ -315,6 +322,18 @@
   .greeting {
     max-width: 38%;
     padding-right: 0px;
+  }
+
+  .name {
+    max-width: 10.7em;
+    font-size: 0.72em;
+    margin-left: 0;
+  }
+
+  .date {
+    font-size: 0.72em;
+    padding-top: 1.5em;
+    padding-left: 15px;
   }
 
   .create {
@@ -346,7 +365,7 @@
   }
 
   .navRight {
-    margin-left: 1em;
+    margin-left: 25%;
   }
 
   .menu li {
