--- a/Frontend/src/Components/Styles/Links.module.css
+++ b/Frontend/src/Components/Styles/Links.module.css
@@ -299,6 +299,13 @@ th {
     overflow-y: scroll;
   }
 
+  .loadingContainer {
+    display: flex;
+    align-items: center;
+    margin-left: 20%;
+    height: 6rem;
+  }
+
   .table {
     font-size: 0.7em;
     min-width: 900px;
