Updated Count method

--- a/Server/views/linknotfound.ejs
+++ b/Server/views/linknotfound.ejs
@@ -98,7 +98,7 @@
                 <i class="fas fa-link-slash"></i>
             </div>
         </div>
-        <div class="message">Link Not Found !!</div>
+        <div class="message">Link Not Found !! Try Reloading Page</div>
         <div class="info">
             The link you are trying to access was not found.<br>
             Please contact the link owner for further assistance.
